<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/report"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/spam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="20dp"
        android:text="@string/spam"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_dustbin" />

    <TextView
        android:id="@+id/violence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="20dp"
        android:text="@string/violence"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_gun" />

    <TextView
        android:id="@+id/pornography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="20dp"
        android:text="@string/pornography"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_sex_addict" />

    <TextView
        android:id="@+id/other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:drawablePadding="20dp"
        android:text="@string/other"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_report" />

</LinearLayout>